# Shippeo_assignment

./: README.md
shippeo/: Dockerfile  app.py  docker-compose.yml  pyproject.toml
