[tool.poetry]
name = "shippeo"
version = "0.1.0"
description = ""
authors = ["jeanclaude1995 <77775226+jeanclaude1995@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
